--- a/Index.html
+++ b/Index.html
@@ -65,7 +65,7 @@
 
               <!-- End of List; Ole St.Neck -->
 
-      <img class="neck" src="st.neck.jpg" alt="Ole St.Neck" height="42" width="42">
+      <img class="img-fluid" src="st.neck.jpg" alt="Ole St.Neck" height="680" width="600" bottom="200">
 
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
