--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,7 @@
           <br>
           <li> <a href="https://www.ebay.com/itm/Samsung-860-EVO-500GB-2-5-Inch-SATA-III-Internal-SSD-MZ-76E500B-AM/264058414137?epid=14025082919&hash=item3d7b1ba439:g:t6wAAOSw8OFb-gwX:rk:19:pf:0" target="_blank"</a>Hard Drive</li>
           <br>
-          <li> <a href="https://www.neweggbusiness.com/Product/Product.aspx?Item=9SIV15F67W8920&ignorebbr=1&nm_mc=KNC-GoogleBizMKPL-PC&cm_mmc=KNC-GoogleBizMKPL-PC-_-pla-MWE+LAB-_-OS+-+Office+Furniture-_-9SIV15F67W8920&gclid=CjwKCAiA0O7fBRASEiwAYI9QAhoUHJwJ0f-QcNIfGW_J8qFQCzMBLaEKWM6GIQKm4XkpPmz4lqCsABoCP-oQAvD_BwE&gclsrc=aw.ds" target="_blank" </a>Back Support</li>
+          <li> <a href="https://www.neweggbusiness.com/Product/Product.aspx?Item=9SIV15F67W8920&ignorebbr=1&nm_mc=KNC-GoogleBizMKPL-PC&cm_mmc=KNC-GoogleBizMKPL-PC-_-pla-MWE+LAB-_-OS+-+Office+Furniture-_-9SIV15F67W8920&gclid=CjwKCAiA0O7fBRASEiwAYI9QAhoUHJwJ0f-QcNIfGW_J8qFQCzMBLaEKWM6GIQKm4XkpPmz4lqCsABoCP-oQAvD_BwE&gclsrc=aw.ds" target="_blank" </a>Chair</li>
       </div>
 
               <!-- End of List; Ole St.Neck -->
