--- a/Index.html
+++ b/Index.html
@@ -54,7 +54,7 @@
           <br>
           <li> <a href="https://www.amazon.com/Apple-Wireless-Keyboard-Bluetooth-Refurbished/dp/B0113AOSUI/ref=sr_1_7?s=pc&ie=UTF8&qid=1543191615&sr=1-7&keywords=apple+wireless+keyboard" target="_blank"</a>Wireless Keyboard</li>
           <br>
-          <li> <a href="https://www.ebay.com/itm/Raspberry-Pi-3-B-Kodi-Media-Streaming-Kit-Case-2-5A-PWR-16G-Micro-SD-Card-HDMI/122509304452?hash=item1c861fa284:g:BsoAAOSw9GVb2jCB:rk:1:pf:0" target="_blank"</a>Rasperry Pi</li>
+          <li> <a href="https://www.ebay.com/itm/Raspberry-Pi-3-B-Kodi-Media-Streaming-Kit-Case-2-5A-PWR-16G-Micro-SD-Card-HDMI/122509304452?hash=item1c861fa284:g:BsoAAOSw9GVb2jCB:rk:1:pf:0" target="_blank"</a>Kodi</li>
           <br>
           <li> <a href="https://www.google.com/shopping/product/11994806550997081687?lsf=seller:10048,store:7007790024078639878&prds=oid:17479012452460530070&q=computor+monitor+staples+newington+nh&hl=en&ei=e0X7W6m7A7C2ggf1tKKQCA&lsft=adlpxid:pla;298340408850;249898101031;c;9002443;pla-298340408850;2720259;pla;local;176&lsft=gclid:Cj0KCQiArenfBRCoARIsAFc1FqfkkVJABwOBMEHAxPyw4pg1SnDBTbVuUpMegDI7b7ojQVTmt238lzIaAnSeEALw_wcB" target="_blank" </a><I>Computer Monitor</I>   🌟</li>
           <br>
