--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,7 @@
           <br>
           <li> <a href="https://www.amazon.com/Ernie-Ball-8-String-Slinky-Nickel/dp/B004Y9YQS0/ref=asc_df_B004Y9YQS0/?tag=hyprod-20&linkCode=df0&hvadid=312211947560&hvpos=1o2&hvnetw=g&hvrand=5094441870712071119&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9002443&hvtargid=pla-348503263642&psc=1" target="_blank"</a>Guitar Strings</li>
           <br>
-          <li> <a href="https://www.amazon.com/Under-Armour-RailFit-Running-Overcast/dp/B0714R2SS1/ref=sr_1_48?s=apparel&ie=UTF8&qid=1543188530&sr=1-48&nodeID=7147441011&psd=1&keywords=under%2Barmour%2Bshoes&refinements=p_36%3A2661614011%2Cp_89%3AUnder%2BArmour&th=1&psc=1" target="_blank"</a>Shoes 10.5 (Black Anthracite)</li>
+          <li> <a href="https://www.amazon.com/Under-Armour-RailFit-Running-Overcast/dp/B0714R2SS1/ref=sr_1_48?s=apparel&ie=UTF8&qid=1543188530&sr=1-48&nodeID=7147441011&psd=1&keywords=under%2Barmour%2Bshoes&refinements=p_36%3A2661614011%2Cp_89%3AUnder%2BArmour&th=1&psc=1" target="_blank"</a>Shoes 10.5 (Black Anth.)</li>
           <br>
           <li> <a href="https://www.amazon.com/Apple-Wireless-Keyboard-Bluetooth-Refurbished/dp/B0113AOSUI/ref=sr_1_7?s=pc&ie=UTF8&qid=1543191615&sr=1-7&keywords=apple+wireless+keyboard" target="_blank"</a>Wireless Keyboard</li>
           <br>
