--- a/Index.html
+++ b/Index.html
@@ -48,6 +48,8 @@
           <br>
           <li> <a href="http://shop.vigilantecoffee.com/coffees/colombia-la-caturrita.html" target="_blank"</a>Coffee    /   <a href="https://www.ebay.com/p/FONTANA-by-Starbucks-White-Chocolate-Mocha-Sauce-Best-Before-March-26-2018/1400293837?_trkparms=aid%3D333200%26algo%3DCOMP.MBE%26ao%3D1%26asc%3D20170706093515%26meid%3Dc4234d2e962c44bf8aba11405b2df81e%26pid%3D100831%26rk%3D1%26rkt%3D3%26%26itm%3D142735375585&_trksid=p2349526.c100831.m5025&iid=142735375585" target="_blank"</a>White chocolate mix</li>
           <br>
+          <li> <a href="https://www.eyebuydirect.com/cart" target="_blank"</a>Glasses</li>
+          <br>
           <li> <a href="https://www.amazon.com/Ernie-Ball-8-String-Slinky-Nickel/dp/B004Y9YQS0/ref=asc_df_B004Y9YQS0/?tag=hyprod-20&linkCode=df0&hvadid=312211947560&hvpos=1o2&hvnetw=g&hvrand=5094441870712071119&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9002443&hvtargid=pla-348503263642&psc=1" target="_blank"</a>Guitar Strings</li>
           <br>
           <li> <a href="https://www.amazon.com/Under-Armour-RailFit-Running-Overcast/dp/B0714R2SS1/ref=sr_1_48?s=apparel&ie=UTF8&qid=1543188530&sr=1-48&nodeID=7147441011&psd=1&keywords=under%2Barmour%2Bshoes&refinements=p_36%3A2661614011%2Cp_89%3AUnder%2BArmour&th=1&psc=1" target="_blank"</a>Shoes 10.5 (Black Anth.)</li>
