--- a/Index.html
+++ b/Index.html
@@ -62,7 +62,7 @@
           <br>
           <li> <a href="https://www.ebay.com/itm/Samsung-860-EVO-500GB-2-5-Inch-SATA-III-Internal-SSD-MZ-76E500B-AM/153214835718?epid=14025178955&hash=item23ac50dc06:g:JvYAAOSwk-9bv2RA:rk:7:pf:0" target="_blank"</a>Hard Drive</li>
           <br>
-          <li> <a href="https://www.neweggbusiness.com/Product/Product.aspx?Item=9SIV15F67W8920&ignorebbr=1&nm_mc=KNC-GoogleBizMKPL-PC&cm_mmc=KNC-GoogleBizMKPL-PC-_-pla-MWE+LAB-_-OS+-+Office+Furniture-_-9SIV15F67W8920&gclid=CjwKCAiA0O7fBRASEiwAYI9QAhoUHJwJ0f-QcNIfGW_J8qFQCzMBLaEKWM6GIQKm4XkpPmz4lqCsABoCP-oQAvD_BwE&gclsrc=aw.ds" target="_blank" </a>Chair</li>
+          <li> <a href="https://www.neweggbusiness.com/Product/Product.aspx?Item=9SIV15F67W8920&ignorebbr=1&nm_mc=KNC-GoogleBizMKPL-PC&cm_mmc=KNC-GoogleBizMKPL-PC-_-pla-MWE+LAB-_-OS+-+Office+Furniture-_-9SIV15F67W8920&gclid=CjwKCAiA0O7fBRASEiwAYI9QAhoUHJwJ0f-QcNIfGW_J8qFQCzMBLaEKWM6GIQKm4XkpPmz4lqCsABoCP-oQAvD_BwE&gclsrc=aw.ds" target="_blank" </a>Comfy Chair</li>
       </div>
 
               <!-- End of List; Ole St.Neck -->
